--- a/next-client/styles/tailwind.css
+++ b/next-client/styles/tailwind.css
@@ -4270,12 +4270,17 @@ input:checked + .slider:before {
 
 .zoom {
   transition: transform .2s; /* Animation */
+  margin-left: 1rem;
 }
 
 .zoom:hover {
-  transform: scale(1.1); /* (150% zoom - Note: if the zoom is too large, it will go outside of the viewport) */
+  transform: scale(1.05); /* (150% zoom - Note: if the zoom is too large, it will go outside of the viewport) */
 }
 .card-landing{
   min-width: 20rem;
   max-width: 25rem;
+}
+.course-banner-panel{
+  min-width: 40rem;
+  max-width: 50rem;
 }
